# wirenboard-sms

./: .env.example  .gitignore  PROXMOX.md  README.md  install.sh  proxmox-install.sh  pyproject.toml  requirements.txt  Отправка SMS.md
api/: __init__.py  __main__.py  app.py  config.py  deps.py  models.py  otp.py  sms.py  store.py
deploy/: sms-gateway-admin.service  sms-gateway-portal.service  sms-gateway.service
hotspot/: __init__.py  admin.py  audit.py  models.py  routes.py  store.py  unifi.py
