[project]
name = "sms-gateway"
version = "0.1.0"
description = "Neutral SMS gateway API with optional UniFi hotspot authorization"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "paho-mqtt>=2.0",
  "pydantic-settings>=2.0",
  "httpx>=0.26",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
